--- a/app/src/main/res/layout/fragment_user_detail_edit.xml
+++ b/app/src/main/res/layout/fragment_user_detail_edit.xml
@@ -38,6 +38,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
+            android:inputType="numberDecimal"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
