--- a/app/src/main/res/layout/fragment_user_detail_show.xml
+++ b/app/src/main/res/layout/fragment_user_detail_show.xml
@@ -66,16 +66,14 @@
         app:layout_constraintEnd_toStartOf="@+id/im3"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/p2"
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
         android:id="@+id/im3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/im2"
+        app:layout_constraintTop_toBottomOf="@+id/p2"
         app:srcCompat="@drawable/ic_edit" />
 
     <TextView
@@ -88,7 +86,6 @@
         app:layout_constraintEnd_toStartOf="@+id/im4"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/im4"
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
