--- a/app/src/main/res/menu/menu_map_fragment.xml
+++ b/app/src/main/res/menu/menu_map_fragment.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/myProfile"
+        android:id="@+id/my_profile"
         android:orderInCategory="100"
         android:title="@string/edit_profile"
         app:showAsAction="never"/>
     <item
-        android:id="@+id/sendMyLocation"
+        android:id="@+id/send_my_location"
         android:orderInCategory="100"
         android:title="@string/share_location"
         app:showAsAction="never" />
